# gpt_math_markdown_convert

./: .gitignore  LICENSE  README.md  README.zh-CN.md  convert_drag.bat  pyproject.toml  tr.py
scripts/: build_exe.ps1
